Funcion bipartita agregada

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Definir si es Dirigido/No Dirigido y Ponderado/No Ponderado.</p>
     <p>Zona para cargar datos de Vértices y Aristas.</p>
 
-    <textarea id="matriz-input" rows="6" cols="40"
+    <textarea id="matriz_input" rows="6" cols="40"
     placeholder="Ejemplo:
 0 1 0
 1 0 1
