--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2>2. Algoritmo</h2>
         <p>Seleccionar Algoritmo:</p>
         <select id="select-algoritmo">
-            <option value="1">Algoritmo 1</option>
+            <option value="1">Algoritmo 1 (BFS) </option>
             <option value="2">Algoritmo 2</option>
             <option value="3">Algoritmo 3</option>
         </select>
@@ -56,6 +56,7 @@
         <p>Espacio: <span id="espacio-analisis">--</span></p>
 
     </div> <script src="main.js"></script>
+    <script src="bfs.js"></script>
     <script src="src/bipartito.js"></script>
     <script src="src/matching.js"></script>
 </body>
